[metadata]
name = potteringabout-awsutils
version = 0.0.3
author = Antony Potter
author_email = tone@potteringabout.net
description = Some bits and bobs for AWS python coding.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonyPotter/awsutils.git
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3

[options.packages.find]
where = src
